// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FatherSonComponent Si hay cliente hacer match con el snapshot 1`] = `
<div
  id="root4"
>
  <h5>
    Hijo
  </h5>
  <code>
     {
  "name": "Juan",
  "id": 1
}

  </code>
  <button
    class="btn btn-outline-primary"
    id="btn-change"
  >
     Cambiar ID

  </button>
  
  <button
    class="btn btn-outline-danger"
    id="btn-delete"
  >
     Borrar cliente

  </button>
  
</div>
`;

exports[`FatherSonComponent debe hacer match con el snapshot 1`] = `
<div
  id="root1"
>
  <h5>
    Hijo
  </h5>
  <code>
     

  </code>
  
  
</div>
`;
